# veggiemates-crawler

./: .dockerignore  .gitignore  Dockerfile  api.sh  data_processing.py  filters.json  filters_bw.json  gcloud_utils.py  listings.json  listings_bw.json  main.py  main_bw.py  meta.json  meta_bw.json  metadata_bw.json  metadata_indexed_bw.json  metadata_price_sorted.json  metadata_price_sorted_bw.json  metadata_serial_sorted_bw.json  pyproject.toml
