[tool.poetry]
name = "veggiemate"
version = "0.1.0"
description = ""
authors = ["jianshen92 <jianshen92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pandas = "^1.3.4"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.27"
psycopg2-binary = "^2.9.2"
google-cloud-storage = "^1.43.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
